# gh-issue-manager

./: README.md  __init__.py  __main__.py  ai.py  analyse.py  browse.py  cli.py  config.example.json  config.py  gh.py  kanban.py  prepare_open_source.py  pyproject.toml  server.py  ui.py  views.py  wizard.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: api.js  api.ts  main.js  main.ts  style.css  types.ts
